--- a/help/html/en/preferences.html
+++ b/help/html/en/preferences.html
@@ -19,22 +19,41 @@
 <body>
 	<h1>Preferences</h1>
 	<p class="inprogress">This dialog provides a way to set different user preferences. The parameters are grouped into three sections: <a href="#general" class="place">General</a>, <a href="#task" class="place">Task</a> and <a href="#output" class="place">Output</a>. Also, consult the <a href="#hidden" class="place">&quot;Hidden&quot; Settings</a> section that contains info about some additional settings. They might become available in this dialog in future.</p>
+	<p class="screenshot"><img src="images/preferences.png" alt="Preferences" /></p>
+	<p class="tip">Hover your mouse over a dialog element to get its short description at its bottom (Desktop platforms only).</p>
 	<p class="inprogress">Write where the settings are stored.</p>
-	<p class="info">You can reset your settings by holding <em>Shift</em> and clicking <strong>OK</strong> button. You will be presented with the confirmation dialog. If you press <strong>Restore Defaults</strong>, all settings will be reset to their defaults.</p>
-	<p class="tip">TIP: Hover your mouse over parameter to get its short description at the bottom of the dialog (Desktop platforms only).</p>
-<h2><a id="general">General</a></h2>
+	<p class="note">You can reset your settings by holding <em>Shift</em> and clicking <strong>OK</strong> button. You will be presented with the confirmation dialog. If you press <strong>Restore Defaults</strong>, all settings will be reset to their default values.</p>
+	<h2><a id="general">General</a></h2>
     <p>This section contains general application settings.</p>
+	<p class="screenshot"><img src="images/preferences.general.png" alt="General Section" /></p>
 	<ol class="params inprogress">
+		<li><span class="name"></span> <span class="type"></span> - </li>
+		<li><span class="name"></span> <span class="type"></span> - </li>
+		<li><span class="name"></span> <span class="type"></span> - </li>
+		<li><span class="name"></span> <span class="type"></span> - </li>
 		<li><span class="name"></span> <span class="type"></span> - </li>
 	</ol>
     <h2><a id="task">Task</a></h2>
     <p>This section contains task related settings.</p>
+	<p class="screenshot"><img src="images/preferences.task.png" alt="Task Section" /></p>
 	<ol class="params inprogress">
+		<li><span class="name"></span> <span class="type"></span> - </li>
+		<li><span class="name"></span> <span class="type"></span> - </li>
+		<li><span class="name"></span> <span class="type"></span> - </li>
 		<li><span class="name"></span> <span class="type"></span> - </li>
 	</ol>
     <h2><a id="output">Output</a></h2>
     <p>This section conatins solution output related settings.</p>
+	<p class="screenshot"><img src="images/preferences.output.png" alt="Output Section" /></p>
 	<ol class="params inprogress">
+		<li><span class="name"></span> <span class="type"></span> - </li>
+		<li><span class="name"></span> <span class="type"></span> - </li>
+		<li><span class="name"></span> <span class="type"></span> - </li>
+		<li><span class="name"></span> <span class="type"></span> - </li>
+		<li><span class="name"></span> <span class="type"></span> - </li>
+		<li><span class="name"></span> <span class="type"></span> - </li>
+		<li><span class="name"></span> <span class="type"></span> - </li>
+		<li><span class="name"></span> <span class="type"></span> - </li>
 		<li><span class="name"></span> <span class="type"></span> - </li>
 	</ol>
 	<h2><a id="hidden">&quot;Hidden&quot; Settings</a></h2>
